@@ -25,7 +25,7 @@
   <br>
   All other brand-names are &copy; by their respective authors!</p>
 <p class="text">&nbsp;</p>
-<p>Thanks go to:</p>
+<p class="text">Thanks go to</p>
 <ul>
   <li class="text">Brian King for providing information</li>
   <li class="text">Toni Wilen for keeping us up-to-date, providing information</li>
