@@ -14,7 +14,7 @@
   should help change that.</p>
 <p class="text">UAE can now emulate the CPU at considerably more than 060 speeds.
   That should do for a while - although further speedups are still possible.</p>
-<p>A description of what the settings will cause the JIT compiler to do:</p>
+<p class="text">A description of what the settings will cause the JIT compiler to do:</p>
 <p class="text"><strong>Cache Size:</strong> The size (in kB) the JIT compiler
   uses to store pretranslated code. When this becomes full, or when the OS issues
   a flush icache instruction, this gets completely emptied, and then refilled
