@@ -7,21 +7,21 @@
 </head>
 <body class="site">
 <p class="headline1">Speed</p>
-<p>On a sufficiently powerful PC, UAE will give you quite an authentic flashback
+<p class="text">On a sufficiently powerful PC, UAE will give you quite an authentic flashback
   into the past. Thanks to DirectX, the raw drawing throughput of this version
   will be among the highest of all Intel ports. 800x600 is only about 20% slower
   than 320x200 on a Pentium 100, although it requires more than seven times as
   many bytes per second to be pumped across the PCI bus. UAE's native display
   depth is 16 bpp. This table shows how the net drawing speed is affected by
   your display type:</p>
-<p>16 bpp full screen - 100%<br>
+<p class="text">16 bpp full screen - 100%<br>
   16 bpp desktop - 98% <br>
   24 bpp desktop - 72%<br>
   32 bpp desktop - 60%</p>
-<p>Unfortunately, windowed mode clipping causes system services such as mouse/keyboard
+<p class="text">Unfortunately, windowed mode clipping causes system services such as mouse/keyboard
   input and the file system to slow down (there is no way of avoiding this at
   the moment). This does not affect SMP machines.</p>
-<p>Sound is a luxury. Because sound output is strictly synchronized with video
+<p class="text">Sound is a luxury. Because sound output is strictly synchronized with video
   DMA, you won't get clean sound unless your machine is capable of running at
   50 fps at least internally.</p>
 </body>
