@@ -7,7 +7,7 @@
 </head>
 <body class="site">
 <p class="headline1">Configurations</p>
-<p>These settings allow you to manage config-files (which have the extension
+<p class="text">These settings allow you to manage config-files (which have the extension
   .uae). These config-files have both a name and description, and control the
   behaviour of WinUAE. Basically, a config-file is an encapsulation of the settings
   found on all the other pages in the GUI.</p>
