@@ -7,7 +7,7 @@
 </head>
 <body class="site">
 <p class="headline1">Input</p>
-<p>You can configure your Input device such as Joysticks to match your requirements
+<p class="text">You can configure your Input device such as Joysticks to match your requirements
   for games or other software:</p>
 <p align="center"><img src="input.gif" alt="WinUAE - Input"></p>
 <p class="text">You can specify <strong>Compatibility mode</strong> with standard
