@@ -7,7 +7,7 @@
 </head>
 <body class="site">
 <p class="headline1">The GUI</p>
-<p>WinUAE includes a fairly powerful (and complicated) GUI (= Graphical User
+<p class="text">WinUAE includes a fairly powerful (and complicated) GUI (= Graphical User
   Interface) to manage the various settings and abilities of your virtual &quot;Amiga&quot;.
   Click on the different tabs in the GUI below to see the help for that particular
   page of the GUI, or use the list below the picture.</p>
