@@ -13,27 +13,27 @@
   up:</p>
 <table border="1">
   <tr>
-    <td>&nbsp;</td>
-    <td>A500</td>
-    <td>A500+</td>
-    <td>A600</td>
-    <td>A3000</td>
-    <td>A1200</td>
-    <td>CD32</td>
-    <td>A4000</td>
+    <td class="text">&nbsp;</td>
+    <td class="text">A500</td>
+    <td class="text">A500+</td>
+    <td class="text">A600</td>
+    <td class="text">A3000</td>
+    <td class="text">A1200</td>
+    <td class="text">CD32</td>
+    <td class="text">A4000</td>
   </tr>
   <tr>
-    <td>Processor</td>
-    <td>68000</td>
-    <td>68000</td>
-    <td>68000</td>
-    <td>68030</td>
-    <td>68EC020</td>
-    <td>68EC020</td>
-    <td>68030/040</td>
+    <td class="text">Processor</td>
+    <td class="text">68000</td>
+    <td class="text">68000</td>
+    <td class="text">68000</td>
+    <td class="text">68030</td>
+    <td class="text">68EC020</td>
+    <td class="text">68EC020</td>
+    <td class="text">68030/040</td>
   </tr>
   <tr>
-    <td>Chip RAM</td>
+    <td class="text">Chip RAM</td>
     <td class="text">512kB, 1MB</td>
     <td class="text">1MB</td>
     <td class="text">1MB</td>
@@ -43,7 +43,7 @@
     <td class="text">2MB</td>
   </tr>
   <tr>
-    <td>Fast RAM</td>
+    <td class="text">Fast RAM</td>
     <td class="text">0 - 8MB</td>
     <td class="text">0 - 8MB</td>
     <td class="text">0 - 8MB</td>
@@ -53,7 +53,7 @@
     <td class="text">0 - 8MB</td>
   </tr>
   <tr>
-    <td>Slow RAM</td>
+    <td class="text">Slow RAM</td>
     <td class="text">0 - 1MB</td>
     <td class="text">0 - 1MB</td>
     <td class="text">n/a</td>
@@ -63,7 +63,7 @@
     <td class="text">n/a</td>
   </tr>
   <tr>
-    <td>Z3-Fast</td>
+    <td class="text">Z3-Fast</td>
     <td class="text">n/a</td>
     <td class="text">n/a</td>
     <td class="text">n/a</td>
@@ -73,7 +73,7 @@
     <td class="text">0 - 256MB</td>
   </tr>
   <tr>
-    <td>RTG RAM</td>
+    <td class="text">RTG RAM</td>
     <td class="text">n/a</td>
     <td class="text">n/a</td>
     <td class="text">n/a</td>
@@ -83,7 +83,7 @@
     <td class="text">0 - 32MB</td>
   </tr>
   <tr>
-    <td>Rom File</td>
+    <td class="text">Rom File</td>
     <td class="text">1.2, 1.3, 2, 3.1</td>
     <td class="text">2.0, 3.1</td>
     <td class="text">2.0, 3.1</td>
@@ -93,7 +93,7 @@
     <td class="text">3.0, 3.1</td>
   </tr>
   <tr>
-    <td>Hard Drive</td>
+    <td class="text">Hard Drive</td>
     <td class="text">Yes</td>
     <td class="text">Yes</td>
     <td class="text">Yes</td>
@@ -103,7 +103,7 @@
     <td class="text">Yes</td>
   </tr>
   <tr>
-    <td>Chip Set</td>
+    <td class="text">Chip Set</td>
     <td class="text">OCS</td>
     <td class="text">ECS</td>
     <td class="text">ECS</td>
@@ -113,7 +113,7 @@
     <td class="text">AGA</td>
   </tr>
   <tr>
-    <td>Floppies</td>
+    <td class="text">Floppies</td>
     <td class="text">880kB</td>
     <td class="text">880kB</td>
     <td class="text">880kB</td>
