@@ -7,17 +7,17 @@
 </head>
 <body class="site">
 <p class="headline1">Getting Started</p>
-<p>WinUAE needs some Amiga - programs in order to emulate an Amiga. In this section
-  you can find out what you will need, and how you will get it.</p>
+<p class="text">WinUAE needs some Amiga - programs in order to emulate an Amiga.
+  In this section you can find out what you will need, and how you will get it.</p>
 <p align="center"><img src="inst.gif" alt="WinUAE - Installer"></p>
 <p class="headline2">Topics</p>
 <ul>
-  <li><a href="require.htm">General Requirements</a></li>
-  <li><a href="firsttimeuser.htm">WinUAE for First Time Users</a></li>
-  <li><a href="pcamitrans.htm">Transfer data between Amiga and PC</a></li>
-  <li><a href="requfiles.htm">Required Files</a></li>
-  <li><a href="examples.htm">Example Configurations</a></li>
-  <li><a href="bootdisk.htm">Creating a Boot Disk</a></li>
+  <li class="text"><a href="firsttimeuser.htm">WinUAE For First Time Users</a></li>
+  <li class="text"><a href="bootdisk.htm">Boot Disks</a></li>
+  <li class="text"><a href="require.htm">Requirements</a></li>
+  <li class="text"><a href="pcamitrans.htm">Data Transfer Amiga &lt;-&gt; PC</a></li>
+  <li class="text"><a href="examples.htm">Example Configurations</a></li>
+  <li class="text"><a href="requfiles.htm">Required Files</a></li>
 </ul>
 </body>
 </html>
